--- a/src/webparts/adminDashboard/components/AdminDashboard.module.scss
+++ b/src/webparts/adminDashboard/components/AdminDashboard.module.scss
@@ -86,3 +86,9 @@
   font-weight: bold;
   font-size: 1.5rem;
 }
+.closedImg {
+  width: 1.8rem;
+  height: 1.8rem;
+  border-radius: 0.4rem;
+  margin-right: 0.5rem;
+}
